about photo ubdate2

--- a/pages/About.html
+++ b/pages/About.html
@@ -1,5 +1,5 @@
     <div id="Aboutphoto">
-        <img src="../images/about/zx.jpg" alt="zx-photo">
+        <img src="images/about/zx.jpg" alt="zx-photo">
         <p>ZI XUAN</p>
     </div>
 <!--depiction-->
