--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <!--    script-->
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/headerfooter.js"></script>
+    <script src="js/index.js"></script>
     <script>
 //預設帶入-------------------------------
         $('#container').load('pages/Portfolio.html');
