--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -65,7 +65,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/tanloo-02.jpg" alt="">
+                        <img src="images/gallery/tanloo-02.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
@@ -77,7 +77,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/sliver-01.jpg" alt="">
+                        <img src="images/gallery/cis/sliver-01.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/%E5%8B%95%E7%89%A9%E5%90%88%E6%88%90.jpg" alt="">
+                        <img src="images/gallery/%E5%8B%95%E7%89%A9%E5%90%88%E6%88%90.jpg" alt="">
 <!--                        <button class="btnx">X</button>-->
                       </div>
                     </div>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/cis/zixuan-01.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/min9-01.png" alt="">
+                        <img src="images/gallery/min9-01.png" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
@@ -127,7 +127,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/hamm-01.png" alt="">
+                        <img src="images/gallery/hamm-01.png" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
@@ -141,7 +141,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/alaska-01.png" alt="">
+                        <img src="images/gallery/alaska-01.png" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/cis/zixuan-01.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
@@ -167,7 +167,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/cis/zixuan-01.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
