--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -148,12 +148,12 @@
                 </li>
                 <li id="gra08" class="gra gw48">
                     <div class="coverarea">
-                        <h3></h3>
-                        <p></p>
+                        <h3>funny fruit</h3>
+                        <p>AI水果擬人化</p>
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/fruit-01.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
@@ -162,74 +162,100 @@
             <ul>
                 <li id="gra09" class="gra gw27">
                     <div class="coverarea">
-                        <h3></h3>
-                        <p></p>
+                        <h3>新品BANNER</h3>
+                        <p>各品牌banner選集</p>
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/pchot/new-01.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
                 </li>
-                <li class="gra gw40">
+                <li id="gra10" class="gra gw40">
                     <div class="coverarea">
-                        <h3></h3>
-                        <p></p>
+                        <h3>樂天 SUPER SALE</h3>
+                        <p>樂天活動banner設計</p>
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/pchot/04ss-01.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
                 </li>
-                <li id="gra10" class="gra gral gw27">
+                <li id="gra11" class="gra gral gw27">
                     <div class="coverarea">
-                        <h3></h3>
-                        <p></p>
+                        <h3>RAZER BANNER</h3>
+                        <p>RAZER活動banner選集</p>
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/pchot/razer-01.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
                 </li>
             </ul>
             <ul>
-                <li id="gra11"class="gra gw313">
+                <li id="gra12"class="gra gw313">
                     <div class="coverarea">
-                        <h3></h3>
-                        <p></p>
+                        <h3>在地偶得</h3>
+                        <p>鹿港鎮公所展覽文宣</p>
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/exhibition/exh-02.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
                 </li>
-                <li id="gra12" class="gra gw313">
+                <li id="gra13" class="gra gw313">
                     <div class="coverarea">
-                        <h3></h3>
-                        <p></p>
+                        <h3>文起雲湧</h3>
+                        <p>鹿港鎮公所展覽文宣</p>
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/exhibition/exh-03.jpg" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
                 </li>
-                <li id="gra13" class="gra gral gw313">
+                <li id="gra14" class="gra gral gw313">
                     <div class="coverarea">
-                        <h3></h3>
-                        <p></p>
+                        <h3>林俊寅</h3>
+                        <p>鹿港鎮公所展覽文宣</p>
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="../images/gallery/cis/zixuan-01.jpg" alt="">
+                        <img src="images/gallery/exhibition/exh-01.jpg" alt="">
+                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                      </div>
+                    </div>
+                </li>
+            </ul>
+            <ul>
+                <li id="gra15"class="gra gw64">
+                    <div class="coverarea">
+                        <h3>天人合一</h3>
+                        <p>主視覺設計</p>
+                    </div>
+                    <div class="graimg">
+                      <div>
+                        <img src="images/gallery/skypeople-01.png" alt="">
+                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                      </div>
+                    </div>
+                </li>
+                <li id="gra16"class="gra gw313">
+                    <div class="coverarea">
+                        <h3>小雛菊</h3>
+                        <p>名片設計</p>
+                    </div>
+                    <div class="graimg">
+                      <div>
+                        <img src="images/gallery/card-01.png" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
