--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -90,7 +90,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/%E5%8B%95%E7%89%A9%E5%90%88%E6%88%90.jpg" alt="">
-<!--                        <button class="btnx">X</button>-->
+                        <button class="btnx">X</button>
                       </div>
                     </div>
                 </li>
@@ -264,8 +264,37 @@
         </div>
 <!--        movies-->
         <div class="line"><div></div><h2>影視作品</h2><div></div></div>
-        
+            
         <div id="movies">
-            div
+            <div>
+                <div class="movie">
+                    <div id="video01">
+                        <iframe width="100%" height="300" src="https://www.youtube.com/embed/2nywPXoB6wM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="videotext">
+                       <div class="videotextin">
+                            <h3>麥向小田|育秀盃微電影類——首獎</h3>
+                            <p>
+                            擔任：PM、攝影、腳本、音效人員<br><br>
+                            位於高雄市的前金幼稚園，以「咱糧學堂」串起了孩子們、家長以及老師們和整個社區之間的情感。「這片小小的田地，出產的雜糧雖然不能和大農家的產量相比，但其中卻蘊含著無數的汗水與心血，更充滿著愛與歡樂。小麥讓小朋友們和家長、老師，還有整個社區凝聚在一起，並無私地奉獻著。」小小的麥子，是希望的種子，串起了大家生命的故事，帶給大家滿滿又豐厚的愛！</p>
+                            <a href="http://award.ysed.org.tw/current_detail/14">比賽官網連結</a>
+                       </div>
+                    </div>
+                </div>
+                <div class="movie">
+                    <div id="video01">
+                        <iframe width="100%" height="300" src="https://www.youtube.com/embed/GmI59oG_dpk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="videotext">
+                       <div class="videotextin">
+                            <h3>Taste Of Love｜仿製</h3>
+                            <p>擔任：攝影、美術<br>
+                            因為很喜歡原片的拍攝手法與風格，所以和同學討論後，決定一起嘗試翻拍，雖然場景看似簡單，但因為有大量的燈光及特寫，所以每個分鏡，卻都是要經歷許久的時間定位才能開拍，雖然不是原創，但還是一部讓我印象深刻的作品。
+                            </p>
+                            <a href="https://vimeo.com/254078716">原片連結</a>
+                       </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
