--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="js/index.js"></script>
     <script>
 //預設帶入-------------------------------
-        $('#container').load('pages/Portfolio.html');
+        $('#container').load('pages/About.html');
 //選單切換內容-------------------------------
         $(".menu>ul>li>a").click(function(e){
             let x = $(this).parent().index();
