--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -49,7 +49,7 @@
                          5. 程式設計<br>
                          註：此為畢業製作專題。
                     </p>
-                    <a href="#" target="_blank">點我看企劃書</a>
+                    <a href="https://drive.google.com/file/d/1OWw6PtQIi89U3LvlwiwkY0SWM82IyXrH/view?usp=sharing" target="_blank">點我看企劃書</a>
                 </div>
            </div>
         </div>
