--- a/pages/About.html
+++ b/pages/About.html
@@ -19,17 +19,18 @@
             </li>
             <li>
                 <div class="icon"><i class="fas fa-edit"></i></div>
-                <h3>企劃文案</h3>
-                <p>資料收集、資訊分析、團隊溝通、文書撰寫</p>
+                <h3>資料處理</h3>
+                <p>資料收集、資訊分析、文書撰寫</p>
             </li>
             <li>
                 <div class="icon"><i class="fas fa-camera-retro"></i></div>
                 <h3>影視製作</h3>
-                <p>分鏡腳本、攝影構圖、影視後製等、音效合成</p>
+                <p>分鏡腳本、攝影構圖、影視後製等</p>
             </li>
         </ul>
     </div>
 <!--License-->
+<!--
     <div id="License">
         <div class="license">
             <div id="l01" class="licimg">
@@ -48,6 +49,7 @@
             </div>
 
         </div>
+-->
 <!--
         <div class="license">
             <div id="l01"></div>
