--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -4,7 +4,7 @@
        
         <div id="web">
            <div class="web" id="web-pento">
-                <a href="https://lmwfjb.github.io/Pento/" target="_blank" ></a>
+                <a href="https://sophia80524.github.io/pento2/" target="_blank" ></a>
                 <div class="coverarea">
                     <h3>PENTO｜電商前端網站</h3>
                     <p>
