--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -243,7 +243,7 @@
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="images/gallery/skypeople-01.png" alt="">
+                        <img src="" alt="">
                         <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
                       </div>
                     </div>
