--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <!--   header-->
     <header>
-        <div id="logo"><a href="index.html"><img src="images/logo-02-02.png" alt="logo"></a></div>
+
         <nav class="menu">
             <ul>
                <li><a id="aboutbtn" href="javascript:void(0);">About</a></li>
@@ -25,14 +25,14 @@
     <h1>Make it happen!</h1>
     <div id="container"></div>
 <!--    footer-->
-    <footer>Zx 2021. All Rights Reserved.</footer>
+    <footer>Zx 2023. All Rights Reserved.</footer>
 <!--    script-->
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/headerfooter.js"></script>
     <script src="js/index.js"></script>
     <script>
 //預設帶入-------------------------------
-        $('#container').load('pages/About.html');
+        $('#container').load('pages/Portfolio.html');
 //選單切換內容-------------------------------
         $(".menu>ul>li>a").click(function(e){
             let x = $(this).parent().index();
