--- a/pages/About.html
+++ b/pages/About.html
@@ -3,24 +3,26 @@
         <p>ZI XUAN</p>
     </div>
 <!--depiction-->
-    <div id="depiction">“Make it happen”是我最喜歡的一句話，雖然人的生命有限，但是潛能卻是無限的。不要放棄每個機會，對於想要的成果，就要盡力去讓它產生，才有達到目標的可能。</div>
+    <div id="depiction">
+        兩年 UI/UX 設計經驗｜設計本科生｜釐清需求再行動
+      </div>
 <!--skill-->
     <div id="skill">   
         <ul>
             <li>
-                <div class="icon"><i class="fas fa-code"></i></div>
+                <div class="icon"><i class="fas fa-edit"></i></div>
                 <h3>網頁設計</h3>
-                <p>Html、CSS、簡單JS、jQuery、UI設計、wireframe</p>
+                <p>Wireframe、Mockup、Prototype</p>
             </li>
             <li>
                 <div class="icon"><i class="fas fa-pen-nib"></i></div>
-                <h3>平面設計</h3>
-                <p>CIS設計、LOGO設計、banner設計、版面設計等</p>
+                <h3>視覺設計</h3>
+                <p>CIS設計、LOGO設計、Banner設計等</p>
             </li>
             <li>
-                <div class="icon"><i class="fas fa-edit"></i></div>
-                <h3>資料處理</h3>
-                <p>資料收集、資訊分析、文書撰寫</p>
+                <div class="icon"><i class="fas fa-code"></i></div>
+                <h3>程式語言</h3>
+                <p>Html、CSS、簡單JS、jQuery、bootstrap</p>
             </li>
             <li>
                 <div class="icon"><i class="fas fa-camera-retro"></i></div>
