--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -66,7 +66,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/tanloo-02.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -78,23 +78,25 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/cis/sliver-01.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
-                <li id="gra03"class="gra gw27">
+                <li id="gra16"class="gra gw27">
                     <div class="coverarea">
-                        <h3>動物飯團</h3>
-                        <p>PS電腦合成</p>
+                        <h3>小雛菊</h3>
+                        <p>名片設計</p>
                     </div>
                     <div class="graimg">
                       <div>
-                        <img src="images/gallery/%E5%8B%95%E7%89%A9%E5%90%88%E6%88%90.jpg" alt="">
-                        <button class="btnx">X</button>
+                        <img src="images/gallery/card-01.png" alt="">
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
             </ul>
+            
+
             <ul>
                 <li id="gra04" class="gra gral gw40">
                     <div class="coverarea">
@@ -104,7 +106,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/cis/zixuan-01.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -116,7 +118,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/min9-01.png" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -128,7 +130,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/hamm-01.png" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -142,7 +144,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/alaska-01.png" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -154,7 +156,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/fruit-01.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -168,7 +170,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/pchot/new-01.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -180,7 +182,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/pchot/04ss-01.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -192,7 +194,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/pchot/razer-01.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -206,7 +208,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/exhibition/exh-02.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -218,7 +220,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/exhibition/exh-03.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
@@ -230,33 +232,7 @@
                     <div class="graimg">
                       <div>
                         <img src="images/gallery/exhibition/exh-01.jpg" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
-                      </div>
-                    </div>
-                </li>
-            </ul>
-            <ul>
-                <li id="gra15"class="gra gw64">
-                    <div class="coverarea">
-                        <h3>天人合一</h3>
-                        <p>主視覺設計</p>
-                    </div>
-                    <div class="graimg">
-                      <div>
-                        <img src="" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
-                      </div>
-                    </div>
-                </li>
-                <li id="gra16"class="gra gw313">
-                    <div class="coverarea">
-                        <h3>小雛菊</h3>
-                        <p>名片設計</p>
-                    </div>
-                    <div class="graimg">
-                      <div>
-                        <img src="images/gallery/card-01.png" alt="">
-                        <button class="btnx">scroll<i class="fas fa-angle-down"></i></button>
+                        <button class="btnx">任意點擊關閉</button>
                       </div>
                     </div>
                 </li>
