--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -3,20 +3,44 @@
        <div class="line"><div></div><h2>網頁作品</h2><div></div></div>
        
         <div id="web">
+           <div class="web" id="web-esis">
+                <a href="https://ltc.esis.com.tw/Forms/index.html" target="_blank" ></a>
+                <div class="coverarea">
+                    <h3>照管家｜會員制長照資源整合平台</h3>
+                    <p>
+                        製作內容：<br>
+                        1.  Functional Map<br>
+                        2. Logic Flow<br>
+                        3. Mockup、Prototype<br>
+                        4. 網站測試
+                    </p>
+                </div>
+           </div>
+           <div class="web" id="web-esisl">
+                <a href="http://www.esis.com.tw/home/ltcs/Ltcsintro.html" target="_blank" ></a>
+                <div class="coverarea">
+                    <h3>照管家居服系統｜一頁式介紹網站</h3>
+                    <p>
+                        製作內容：<br>
+                        1. 文案撰寫<br>
+                        2. Wireframe<br>
+                        3. Mockup<br>
+                        4. Front-end development
+                    </p>
+                </div>
+           </div>
            <div class="web" id="web-pento">
                 <a href="https://sophia80524.github.io/pento2/" target="_blank" ></a>
                 <div class="coverarea">
                     <h3>PENTO｜電商前端網站</h3>
                     <p>
-                        ．成效:獲選於結訓日上台發表<br>
-                        ．擔任:企劃人員、前端工程師<br>
-                        ．專案主要內容:<br>
+                        製作內容：<br>
                         1. 品牌建立<br>
-                        2. 形象、購物網站規劃及建置<br>
-                        3. 商品組合規劃<br><br>
-                        註：此為小組練習之專案。
+                        2. Wireframe<br>
+                        3. Mockup<br>
+                        4. Front-end development<br><br>
+                        註：此為練習專案。
                     </p>
-                    <a href="https://reurl.cc/LdvvYx" target="_blank">點我看企劃書</a>
                 </div>
            </div>
            <div class="web" id="web-gaja">
@@ -24,15 +48,14 @@
                 <div class="coverarea">
                     <h3>GAJA｜形象網站</h3>
                     <p>
-                        ．擔任PM、設計、前端<br>
-                        ．專案主要內容：<br>
-                        1. 品牌發想、建置<br>
-                        2. 版面設計、流程規劃<br>
-                        3. 頁面美術風格設計<br>
-                        4. 程式撰寫<br><br>
-                        註：此為個人練習之專案。
+                        製作內容：<br>
+                        1. 品牌建立<br>
+                        2. Wireframe<br>
+                        3. Mockup<br>
+                        4. Front-end development<br><br>
+                    
+                        註：此為練習專案。
                     </p>
-                    <a href="https://reurl.cc/Oq22xA" target="_blank">點我看企劃書</a>
                 </div>
            </div>
            <div class="web" id="web-first">
@@ -40,16 +63,12 @@
                 <div class="coverarea">
                     <h3>FIRST｜互動網站</h3>
                     <p>
-                        ．擔任PM、美術、音效、分鏡<br>
-                        ．專案主要內容：<br>
-                         1. 概念式遊戲互動網頁<br>
-                         2. 流程規劃、企劃撰寫<br>
-                         3. 美術風格設計、版面設計<br>
-                         4. 動態設計、音效設計<br>
-                         5. 程式設計<br>
+                        製作內容：<br>
+                         1. 流程規劃、企劃撰寫<br>
+                         2. 美術風格設計、版面設計<br>
+                         3. 動態設計、音效設計<br><br>
                          註：此為畢業製作專題。
                     </p>
-                    <a href="https://drive.google.com/file/d/1OWw6PtQIi89U3LvlwiwkY0SWM82IyXrH/view?usp=sharing" target="_blank">點我看企劃書</a>
                 </div>
            </div>
         </div>
