--- a/pages/Portfolio.html
+++ b/pages/Portfolio.html
@@ -8,7 +8,7 @@
                 <div class="coverarea">
                     <h3>照管家｜會員制長照資源整合平台</h3>
                     <p>
-                        製作內容：<br>
+                        負責內容：<br>
                         1.  Functional Map<br>
                         2. Logic Flow<br>
                         3. Mockup、Prototype<br>
@@ -21,7 +21,7 @@
                 <div class="coverarea">
                     <h3>照管家居服系統｜一頁式介紹網站</h3>
                     <p>
-                        製作內容：<br>
+                        負責內容：<br>
                         1. 文案撰寫<br>
                         2. Wireframe<br>
                         3. Mockup<br>
@@ -34,7 +34,7 @@
                 <div class="coverarea">
                     <h3>PENTO｜電商前端網站</h3>
                     <p>
-                        製作內容：<br>
+                        負責內容：<br>
                         1. 品牌建立<br>
                         2. Wireframe<br>
                         3. Mockup<br>
@@ -48,7 +48,7 @@
                 <div class="coverarea">
                     <h3>GAJA｜形象網站</h3>
                     <p>
-                        製作內容：<br>
+                        負責內容：<br>
                         1. 品牌建立<br>
                         2. Wireframe<br>
                         3. Mockup<br>
@@ -63,10 +63,10 @@
                 <div class="coverarea">
                     <h3>FIRST｜互動網站</h3>
                     <p>
-                        製作內容：<br>
+                        負責內容：<br>
                          1. 流程規劃、企劃撰寫<br>
                          2. 美術風格設計、版面設計<br>
-                         3. 動態設計、音效設計<br><br>
+                         3. 音效設計<br><br>
                          註：此為畢業製作專題。
                     </p>
                 </div>
